# BevyJam2022

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: release.yaml
assets/models/: standard_cube.glb  standard_plane.glb  standard_plane2.glb  standard_sphere.glb  standard_sphere_normals_flipped.glb
assets/models/level1/: large_ceiling_supports.gltf  light_shafts.gltf  pillars.gltf  sky_box.gltf  spheres.gltf  spheres_base.gltf  walls.gltf
assets/models/units/: unit1.glb  unit2.glb
assets/models/weapons/: lasergun.glb
assets/shaders/: custom_material.wgsl  emissive_material.wgsl  light_shaft_material.wgsl  orb_material.wgsl  util.wgsl
production_assets/: level1.blend
src/: custom_material.rs  draw_debug.rs  emissive_material.rs  level1.rs  lib.rs  main.rs  material_util.rs  planets.rs  player.rs  player_plugin.rs
src/assets/: custom_material.rs  emissive_material.rs  light_shaft_material.rs  material_util.rs  mod.rs  orb_material.rs  splash_screen.rs
src/audio/: mod.rs
src/console/: debug_pos.rs  mod.rs
src/enemies/: bullet.rs  laserie.rs  mod.rs  orbie.rs
src/ui/: fps.rs  hud.rs  menu.rs  mod.rs  scoreboard.rs
src/world/: level1.rs  mod.rs
