[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", features = ["jpeg"] }
#bevy_polyline = {git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_polyline", branch = "main" }
#bevy_mod_raycast = {git = "https://github.com/aevyrie/bevy_mod_raycast", branch = "master" }
#rand = "*"
#bevy_egui = {git = "https://github.com/DGriffin91/bevy_egui", branch = "main"}
#heron = { git = "https://github.com/DGriffin91/heron", branch = "main", features = ["3d"] }

bevy_polyline = "0.1"
bevy = {version = "0.6", features = ["jpeg"]}
bevy_mod_raycast = "0.3"
rand = "*"
bevy_egui = "0.11"
heron = { version = "1.1.0", features = ["3d"] }

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
