[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.6", features = ["jpeg"] }
bevy_asset_loader = "0.9"
bevy_egui = "0.11"
bevy_polyline = "0.1"
heron = { version = "2.0", features = ["3d"] }
rand = "0.8"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "81d57e129b507047ab165b1cee1975cd54ba100f", features = ["jpeg"]}
bevy_egui = { git = "https://github.com/DGriffin91/bevy_egui", branch = "main" }