[package]
name = "game"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.6", default-features = false, features = [
  "jpeg",
  "bevy_gilrs",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "vorbis",
  "x11",
  "filesystem_watcher",
] }
bevy_asset_loader = "0.9"
bevy_console = "0.3"
bevy_egui = "0.11"
bevy_kira_audio = "0.8"
bevy_polyline = "0.1"
bevy_tweening = "0.3"
bitflags = "1.3"
heron = { version = "2.0", features = ["3d"] }
pathfinding = "3.0"
rand = "0.8"
splines = { git = "https://github.com/phaazon/splines", branch = "dependabot/cargo/master/glam-gte-0.10-and-lt-0.21", features = [
  "impl-glam",
] }

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [patch.crates-io]
# bevy = { git = "https://github.com/bevyengine/bevy", rev = "81d57e129b507047ab165b1cee1975cd54ba100f", features = [
#   "jpeg",
# ] }
# bevy_egui = { git = "https://github.com/DGriffin91/bevy_egui", branch = "main" }
